# fast-file-encryption

./: .buildinfo  AGENTS.md  COPYRIGHT.md  FORMAT.md  README.md  README.rst  decryptor.html  design.html  encryptor.html  errors.html  format.html  genindex.html  index.html  objects.inv  pyproject.toml  requirements.txt  search.html  searchindex.js  setup.cfg  tools.html
.doctrees/: decryptor.doctree  design.doctree  encryptor.doctree  environment.pickle  errors.doctree  format.doctree  index.doctree  tools.doctree
.doctrees/chapters/: code-of-conduct.doctree  contributing.doctree  design.doctree  file-sizes.doctree  format.doctree  get-started.doctree  goals.doctree  license.doctree  used-algorithms.doctree
.doctrees/chapters/reference/: decryptor.doctree  encryptor.doctree  errors.doctree  index.doctree  tools.doctree
.github/workflows/: build-docs.yml  publish.yml  tests.yml
_sources/: design.rst.txt  errors.rst.txt  index.rst.txt  tools.rst.txt
_sources/chapters/: code-of-conduct.rst.txt  design.rst.txt  format.rst.txt  get-started.rst.txt  goals.rst.txt  used-algorithms.rst.txt
_sources/chapters/reference/: index.rst.txt  tools.rst.txt
_static/: README
chapters/: code-of-conduct.html  contributing.html  design.html  file-sizes.html  format.html  get-started.html  goals.html  license.html  used-algorithms.html
chapters/reference/: decryptor.html  encryptor.html  errors.html  index.html  tools.html
docs/: conf.py  decryptor.rst  encryptor.rst  format.rst
docs/chapters/: contributing.rst  file-sizes.rst  license.rst
docs/chapters/reference/: decryptor.rst  encryptor.rst  errors.rst
src/fast_file_encryption/: __about__.py  __init__.py  _about.py  decryptor.py  encryptor.py  errors.py  internals.py  tools.py
tests/: conftest.py  shared.py  test_encryption.py  test_endh.py  test_meta.py  test_stream.py  test_tools.py
tests/data/: 10k-zero.ffe  4k-random.data  4k-random.ffe  8k-random-2nd-key.ffe  8k-random-chunked.ffe  8k-random.data  8k-random.ffe  empty.ffe
tests/keys/: test_2nd_private_key.pem  test_2nd_public_key.pem  test_private_key.pem  test_public_key.pem
