[metadata]
name = fast-file-encryption
version = attr: fast_file_encryption._about.VERSION
author = Tobias Erbsland
author_email = tobias.erbsland@educateit.ch
description = A simple and fast asynchronous file encryption library for large files and data streams.
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/educateitgmbh/fast-file-encryption
project_urls =
    Documentation=https://fast-file-encryption.readthedocs.io/
    Source=https://github.com/educateitgmbh/fast-file-encryption
    Issues=https://github.com/educateitgmbh/fast-file-encryption/issues
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Topic :: Security

[options]
package_dir =
    =src
packages = find:
python_requires = >=3.8
install_requires =
    cryptography >= 36.0.1

[options.packages.find]
where = src