[metadata]
name = fast-file-encryption
version = attr: fast_file_encryption._about.VERSION
author = Erbsland DEV
author_email = info@erbsland.dev
description = A simple and fast asynchronous file encryption library for large files and data streams.
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/erbsland-dev/fast-file-encryption
project_urls =
    Documentation=https://erbsland-dev.github.io/fast-file-encryption/
    Source=https://github.com/erbsland-dev/fast-file-encryption
    Issues=https://github.com/erbsland-dev/fast-file-encryption/issues
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Topic :: Security

[options]
package_dir =
    =src
packages = find:
python_requires = >=3.11
install_requires =
    cryptography >= 45.0.0

[options.packages.find]
where = src